force-app/main/default/objects/CJFW_ReleaseOrderControl__c/CJFW_ReleaseOrderControl__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 주문제어해제</description>
    <label>주문제어해제</label>
    <nameField>
        <displayFormat>ROC{YYYYMMDD}{0000}</displayFormat>
        <label>Release Order Control No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>