force-app/main/default/objects/CJFW_ReleaseOrderControl__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>TODAY()+6</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>