force-app/main/default/objects/CJFW_ReleaseOrderControl__c/fields/FM_CodeAccount__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeAccount__c</fullName>
    <formula>&quot;(&quot; + Account__r.CustomerID__c +&quot;) &quot; +  HYPERLINK( Account__c ,  Account__r.Name )</formula>
    <label>(Code) Account</label>
    <type>Text</type>
</CustomField>