force-app/main/default/objects/CJFW_ReleaseOrderControl__c/fields/NormalizationPlan__c.field-meta.xml
<CustomField>
    <fullName>NormalizationPlan__c</fullName>
    <label>Normalization Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>