force-app/main/default/objects/CJFW_ReleaseOrderControl__c/fields/ReleaseReason__c.field-meta.xml
<CustomField>
    <fullName>ReleaseReason__c</fullName>
    <label>Release Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>마감을 위한 임시해제(마감 후 정상화)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>마감을 위한 임시해제(마감 후 연체)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>입금액 부족으로 인한 연체</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>