force-app/main/default/objects/CJFW_ReleaseOrderControl__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FM_CodeAccount__c</columns>
    <columns>FM_HeadOffice__c</columns>
    <columns>FM_SU__c</columns>
    <columns>FM_Team__c</columns>
    <columns>FM_MA__c</columns>
    <columns>FM_RepresentativeName__c</columns>
    <columns>FM_Period__c</columns>
    <columns>ReleaseReason__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>ApprovedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>